Fixed size of background div. Simplified z-index.

--- a/public/stylesheets/app/photos/search.css
+++ b/public/stylesheets/app/photos/search.css
@@ -28,15 +28,14 @@ select {
   bottom: 48px;
   margin-bottom: -48px;
   padding: 8px 5px 0 5px;
-  z-index: 2;
+  z-index: 1;
 }
 
-.bg {
+#photos > div > div > div.bg {
   bottom: 51px;
   margin-bottom: -51px;
   background-color: black;
   opacity: 0.5;
-  z-index: 1;
   visibility: hidden;
 }
 
